@@ -276,6 +276,20 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/PlotSquared-Bukkit-5.13.13.jar</systemPath>
         </dependency>
+
+        <!-- GriefDefender -->
+        <dependency>
+            <groupId>com.griefdefender</groupId>
+            <artifactId>griefdefender</artifactId>
+            <version>1.5.10</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.griefdefender</groupId>
+            <artifactId>griefdefenderapi</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -356,7 +370,7 @@
                                 </goals>
                                 <configuration>
                                     <tasks>
-                                        <ant antfile="${basedir}/build.xml" />
+                                        <ant antfile="${basedir}/build.xml"/>
                                     </tasks>
                                 </configuration>
                             </execution>
